<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buttonBackground"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:ems="10"
        android:textSize="48sp"
        android:background="@color/buttonBackground"
        android:id="@+id/txtInput"
        android:gravity="right|center_vertical"
        android:textColor="@color/displayValuesText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_goneMarginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInput"
        android:gravity="fill">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="onDigit"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/buttonTextColor"
                android:text="@string/seven"
                tools:ignore="ButtonStyle" />

            <Button
                android:text="@string/eight"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigit"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnEight"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/nine"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigit"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnNine"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/division"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onOperator"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/btnDivide"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/four"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigit"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnFour"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/five"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigit"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnFive"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/six"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigit"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnSix"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/multiplication"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onOperator"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/btnMultiply"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/one"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigit"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnOne"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/two"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigit"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnTwo"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/three"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigit"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnThree"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/subtraction"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onOperator"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/btnSubtract"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/point"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:onClick="onDecimalPoint"
                android:id="@+id/btnDecimal"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle,OnClick"/>

            <Button
                android:text="@string/zero"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/buttonTextColor"
                android:layout_height="match_parent"
                android:onClick="onDigit"
                android:textSize="30sp"
                android:textStyle="bold"
                android:id="@+id/btnZero"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_specials_background"
                android:onClick="onClear"
                android:text="@string/c"
                android:textColor="@color/cbuttonText"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,OnClick" />

            <Button
                android:text="@string/addition"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onOperator"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/btnAdd"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/equals"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:onClick="onEqual"
                android:textSize="30sp"
                android:textStyle="bold"
                android:id="@+id/btnEqual"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle,OnClick"/>
            <Button
                android:text="@string/delete"
                android:background="@drawable/button_specials_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/cbuttonText"
                android:layout_height="match_parent"
                android:onClick="onDelete"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:id="@+id/btnBackSpace"/>
            <Button
                android:text="@string/mean_median"
                android:background="@drawable/button_specials_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/cbuttonText"
                android:layout_height="match_parent"
                android:onClick="onMeanMedian"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:id="@+id/btnMean"
                tools:ignore="ButtonStyle,OnClick"/>

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>