<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buttonBackground"
    android:paddingTop="8dp"
    tools:context=".OptionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:ems="10"
        android:textSize="48sp"
        android:background="@color/buttonBackground"
        android:id="@+id/txtInputOpt"
        android:textColor="@color/displayValuesText"
        android:gravity="right|center_vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/message"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        tools:ignore="RtlHardcoded" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_goneMarginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputOpt"
        android:gravity="fill">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnSevenOpt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="onDigitOpt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/buttonTextColor"
                android:text="@string/seven"
                tools:ignore="ButtonStyle" />

            <Button
                android:text="@string/eight"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigitOpt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnEightOpt"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/nine"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigitOpt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnNineOpt"
                tools:ignore="ButtonStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/four"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigitOpt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnFourOpt"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/five"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigitOpt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnFiveOpt"
                tools:ignore="ButtonStyle" />

            <Button
                android:text="@string/six"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigitOpt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnSixOpt"
                tools:ignore="ButtonStyle"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/one"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigitOpt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnOneOpt"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/two"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigitOpt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnTwoOpt"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/three"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onDigitOpt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/buttonTextColor"
                android:id="@+id/btnThreeOpt"
                tools:ignore="ButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/point"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/buttonTextColor"
                android:layout_height="match_parent"
                android:onClick="onDecimalPointOpt"
                android:id="@+id/btnDecimalOpt"
                tools:ignore="ButtonStyle,OnClick"/>

            <Button
                android:text="@string/zero"
                android:background="@drawable/button_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/buttonTextColor"
                android:layout_height="match_parent"
                android:onClick="onDigitOpt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:id="@+id/btnZeroOpt"
                tools:ignore="ButtonStyle"/>

            <Button
                android:text="@string/c"
                android:background="@drawable/button_specials_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="onClearOpt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/cbuttonText"
                android:id="@+id/btnClearOpt"
                tools:ignore="ButtonStyle,OnClick"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btnBackSpace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_specials_background"
                android:onClick="onBackSpaceOpt"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                android:textColor="@color/cbuttonText"
                android:text="@string/delete"
                tools:ignore="ButtonStyle" />
            <Button
                android:text="@string/Comma"
                android:background="@drawable/button_specials_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/cbuttonText"
                android:layout_height="match_parent"
                android:onClick="onCommaOpt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:id="@+id/btnCommaOpt"
                tools:ignore="ButtonStyle,OnClick"/>
            <Button
                android:text="@string/mean"
                android:background="@drawable/button_specials_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/cbuttonText"
                android:layout_height="match_parent"
                android:onClick="onMeanOpt"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_margin="5dp"
                android:id="@+id/btnMeanOpt"
                tools:ignore="ButtonStyle,OnClick"/>
            <Button
                android:text="@string/median"
                android:background="@drawable/button_specials_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/cbuttonText"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:onClick="onMedianOpt"
                android:textAllCaps="false"
                android:id="@+id/btnMedianOpt"
                tools:ignore="ButtonStyle"/>

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>